fix tooltips z-index ( now > drawers )

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -123,3 +123,7 @@ p>code {
 .v-navigation-drawer__border {
   z-index: 2 !important;
 }
+
+.v-tooltip__content {
+  z-index: 14 !important;
+}
